[gd_scene format=3 uid="uid://cmovijrkx6q7m"]

[ext_resource type="Script" uid="uid://b7rgv0jc3wi4v" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dahq7vmqj1ytq" path="res://Assets/robinHood_ v1.1/bishopOfHereford_.png" id="1_v0iea"]
[ext_resource type="Script" uid="uid://d1tc0c78rjfer" path="res://Scripts/health_manager.gd" id="3_6t5aa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("1_v0iea")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_v0iea")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_v0iea")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_v0iea")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dp3o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4iuc"]
size = Vector2(12, 16)

[node name="Player1" type="CharacterBody2D" unique_id=647595686]
collision_layer = 2
script = ExtResource("1_cvnsp")
maxBufferTime = 0.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=518338731]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7dp3o")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1651175655]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_h4iuc")

[node name="MoveTimer" type="Timer" parent="." unique_id=1800716205]
wait_time = 4.0
one_shot = true

[node name="BufferTimer" type="Timer" parent="." unique_id=136234073]
one_shot = true

[node name="DashPressTimer" type="Timer" parent="." unique_id=1991868778]
wait_time = 0.15
one_shot = true

[node name="HealthManager" type="Node" parent="." unique_id=92446803]
script = ExtResource("3_6t5aa")

[node name="AttackRaycast" type="RayCast2D" parent="." unique_id=415044685]
rotation = -1.5707964
target_position = Vector2(0, 20)
collision_mask = 2

[node name="DashRaycast" type="RayCast2D" parent="." unique_id=2037535853]
rotation = -1.5707964
target_position = Vector2(0, 40)
collision_mask = 2

[node name="DashCooldownTimer" type="Timer" parent="." unique_id=1881951015]
one_shot = true

[node name="DashAttackCooldownTimer" type="Timer" parent="." unique_id=1537987962]
wait_time = 0.5
one_shot = true

[connection signal="playerAttack" from="." to="HealthManager" method="_on_player_attack"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="DashPressTimer" to="." method="_on_dash_press_timer_timeout"]
